tests/ShouldFail/non_positive_inductive.8pus
Inductive bad : Type :=
    | mkbad : (bad -> bad) -> bad
.
